Removed usage of "change" & "update" keys in favor of default and custom action types